# i2cmake

./: README.md
Example 2. Libraries/: CMakeLists.txt
Example 3. Subprojects/: CMakeLists.txt  main.cpp
Example 3. Subprojects/foo/: CMakeLists.txt
Example 4. Find package/: CMakeLists.txt
Example 5. External libraries/: CMakeLists.txt
Template/: CMakeLists.txt
